--- a/src/app/components/flight-line/flight-line.component.html
+++ b/src/app/components/flight-line/flight-line.component.html
@@ -7,14 +7,17 @@
         'border-bottom-1': showTripSummary
       }"
     >
-      <div class="flex align-content-center font-bold" *ngIf="!showTripSummary">
+      <div
+        class="flex-1 flex flex-row justify-content-start align-content-center font-bold"
+        *ngIf="!showTripSummary"
+      >
         <img
-          [src]="'/assets/airline_logos/' + trip.airline.code + '.png'"
+          [src]="'/assets/airline_logos/' + trip?.airline?.code + '.png'"
           class="border-circle airline-logo mr-2 align-self-center"
-          alt="{{ trip.airline.name }}"
+          alt="{{ trip?.airline?.name }}"
         />
         <span class="text-2xl align-self-center font-bold">{{
-          trip.airline.name
+          trip?.airline?.name
         }}</span>
       </div>
       <div class="flex align-content-center font-bold" *ngIf="showTripSummary">
@@ -22,7 +25,21 @@
           {{ "flight_line.flight_summary" | translate }}
         </span>
       </div>
-      <div class="flex">
+      <div class="flex-1 justify-content-center hidden align-content-center">
+        <ng-container *ngIf="!showTripSummary">
+          <span class="text-2xl align-self-center font-bold mr-3">
+            {{ trip?.tripInfo?.[0].country }}
+          </span>
+          <div class="airline-takeoff-mini align-self-center mr-3"></div>
+          <span
+            class="text-2xl align-self-center font-bold"
+            *ngIf="!showTripSummary"
+          >
+            {{ trip?.tripInfo[trip.tripInfo.length - 1].country }}</span
+          >
+        </ng-container>
+      </div>
+      <div class="flex-1 flex justify-content-end align-content-center">
         <span
           class="text-2xl align-self-center font-bold"
           *ngIf="!showTripSummary"
@@ -43,7 +60,7 @@
           {{ "flight_line.outbound" | translate }}
         </div>
       </div>
-      <div class="flex flex-column lg:flex-row lg:py-5 md:mb-5 lg:px-5">
+      <div class="flex fle x-column lg:flex-row lg:py-5 md:mb-5 lg:px-5">
         <div class="flex justify-content-center align-items-center"></div>
         <div
           *ngFor="
@@ -60,7 +77,7 @@
               class="text-center flex justify-content-center align-content-center lg:desktop-spacer"
             >
               <span class="text-xl align-self-center font-bold">{{
-                takeOffTrip.departureTime | date : "HH:mm"
+                takeOffTrip?.departureTime | date : "HH:mm"
               }}</span>
             </div>
             <div
@@ -82,10 +99,10 @@
               class="lg:mt-2 flex justify-content-center align-content-center flex-column lg:desktop-spacer"
             >
               <p class="text-center font-bold">
-                {{ takeOffTrip.airport }}
+                {{ takeOffTrip?.airport }}
               </p>
               <p class="text-center text-600" style="min-width: 100px">
-                {{ takeOffTrip.departureTime | date : "mediumDate" }}
+                {{ takeOffTrip?.departureTime | date : "mediumDate" }}
               </p>
             </div>
           </div>
@@ -93,11 +110,11 @@
       </div>
     </ng-container>
 
-    <hr class="mb-5" *ngIf="(trip?.roundTripInfo)!.length > 0" />
+    <hr class="mb-5" *ngIf="trip?.roundTripInfo?.length > 0" />
 
     <ng-container #inboundFlight *ngIf="(trip?.roundTripInfo)!.length > 0">
       <div class="flex">
-        <div class="airline-takeoff align-self-center mr-3"></div>
+        <div class="airline-return align-self-center mr-3"></div>
         <div class="text-light font-bold align-self-center text-xl">
           {{ "flight_line.inbound" | translate }}
         </div>
@@ -141,10 +158,10 @@
               class="lg:mt-2 flex justify-content-center align-content-center flex-column lg:desktop-spacer"
             >
               <p class="text-center font-bold">
-                {{ takeOffTrip.airport }}
+                {{ takeOffTrip?.airport }}
               </p>
               <p class="text-center text-600" style="min-width: 100px">
-                {{ takeOffTrip.departureTime | date : "mediumDate" }}
+                {{ takeOffTrip?.departureTime | date : "mediumDate" }}
               </p>
             </div>
           </div>
@@ -158,7 +175,8 @@
         </div>
         <div class="flex align-items-center ml-3">
           <span class="text-black font-bold text-xl">
-            5 {{ "flight_line.passengers" | translate }}</span
+            {{ trip?.passengers }}
+            {{ "flight_line.passengers" | translate }}</span
           >
         </div>
       </div>
@@ -168,7 +186,8 @@
         </div>
         <div class="flex align-items-center ml-3">
           <span class="text-black font-bold text-xl">
-            2 {{ "flight_line.baggages_per_person" | translate }}
+            {{ trip?.baggage }}
+            {{ "flight_line.baggages_per_person" | translate }}
           </span>
         </div>
       </div>
