--- a/src/app/screens/about-screen/about-screen.component.html
+++ b/src/app/screens/about-screen/about-screen.component.html
@@ -14,7 +14,7 @@
         >
           {{ "about.about_us" | translate }}
         </p>
-        <p class="font-medium text-xl text-center">
+        <p class="font-medium text-xl text-center text-white">
           {{ "about.para" | translate }}
         </p>
       </div>
