--- a/src/app/screens/flight-details/flight-details.component.scss
+++ b/src/app/screens/flight-details/flight-details.component.scss
@@ -6,6 +6,20 @@
   // .p-card-content {
   //   padding-top: 0px;
   // }
+  height: 100%;
+  display: block;
+
+  .p-card {
+    height: 100%;
+
+    .p-card-body {
+      height: calc(100% - 64px);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+  }
 
   .mobile-title-price-header {
     padding: 16px 42px;
@@ -18,11 +32,23 @@
   //   }
 }
 
-::ng-deep .credit-card {
-  height: 310px;
-  width: 490px;
-  background-color: var(--gray-800);
+@media (prefers-color-scheme: light) {
+  ::ng-deep .credit-card {
+    height: 310px;
+    max-width: 490px;
+    min-width: 320;
+    background-color: var(--surface-200);
+  }
 }
+@media (prefers-color-scheme: dark) {
+  ::ng-deep .credit-card {
+    height: 310px;
+    max-width: 490px;
+    min-width: 320;
+    background-color: var(--gray-800);
+  }
+}
+
 .equafly-logo {
   height: 50px;
   width: 150px;
