--- a/src/app/components/flight-line/flight-line.component.html
+++ b/src/app/components/flight-line/flight-line.component.html
@@ -16,9 +16,11 @@
           class="border-circle airline-logo mr-2 align-self-center"
           alt="{{ trip?.airline?.name }}"
         />
-        <span class="text-2xl align-self-center font-bold">{{
+        <span class="text-2xl align-self-center font-bold mr-3">{{
           trip?.airline?.name
         }}</span>
+
+        <i class="pi pi-info-circle text-2xl align-self-center"></i>
       </div>
       <div class="flex align-content-center font-bold" *ngIf="showTripSummary">
         <span class="text-4xl font-bold align-self-center">
@@ -28,14 +30,14 @@
       <div class="flex-1 justify-content-center hidden align-content-center">
         <ng-container *ngIf="!showTripSummary">
           <span class="text-2xl align-self-center font-bold mr-3">
-            {{ trip?.tripInfo?.[0].country }}
+            {{ trip?.tripInfo?.[0]?.country }}
           </span>
           <div class="airline-takeoff-mini align-self-center mr-3"></div>
           <span
             class="text-2xl align-self-center font-bold"
             *ngIf="!showTripSummary"
           >
-            {{ trip?.tripInfo[trip.tripInfo.length - 1].country }}</span
+            {{ trip?.tripInfo?.[trip?.tripInfo!.length - 1]?.country }}</span
           >
         </ng-container>
       </div>
@@ -110,7 +112,7 @@
       </div>
     </ng-container>
 
-    <hr class="mb-5" *ngIf="trip?.roundTripInfo?.length > 0" />
+    <hr class="mb-5" *ngIf="(trip?.roundTripInfo ?? []).length > 0" />
 
     <ng-container #inboundFlight *ngIf="(trip?.roundTripInfo)!.length > 0">
       <div class="flex">
