--- a/src/app/screens/flight-details/flight-details.component.scss
+++ b/src/app/screens/flight-details/flight-details.component.scss
@@ -1,58 +1,37 @@
 .flight-details-screen {
   height: 100vh;
   padding-top: 84px;
-}
-::ng-deep .price-container {
-  // .p-card-content {
-  //   padding-top: 0px;
-  // }
-  height: 100%;
-  display: block;
 
-  .p-card {
+  ::ng-deep .price-container {
     height: 100%;
+    display: block;
 
-    .p-card-body {
-      height: calc(100% - 64px);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
+    .p-card {
+      height: 100%;
+
+      .p-card-body {
+        height: calc(100% - 64px);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      }
+    }
+
+    .mobile-title-price-header {
+      padding: 16px 42px;
+      border-top-right-radius: 64px;
+      border-top-left-radius: 64px;
+      min-width: 200px;
     }
   }
 
-  .mobile-title-price-header {
-    padding: 16px 42px;
-    border-top-right-radius: 64px;
-    border-top-left-radius: 64px;
-    min-width: 200px;
+  .equafly-logo {
+    height: 50px;
+    width: 150px;
   }
-  //   .p-card-content {
-  //     padding-top: 0;
-  //   }
-}
-
-@media (prefers-color-scheme: light) {
-  ::ng-deep .credit-card {
-    height: 310px;
-    max-width: 490px;
-    min-width: 320;
-    background-color: var(--surface-200);
+  .no-wrap {
+    text-wrap: nowrap;
+    overflow: hidden;
   }
-}
-@media (prefers-color-scheme: dark) {
-  ::ng-deep .credit-card {
-    height: 310px;
-    max-width: 490px;
-    min-width: 320;
-    background-color: var(--gray-800);
-  }
-}
-
-.equafly-logo {
-  height: 50px;
-  width: 150px;
-}
-.no-wrap {
-  text-wrap: nowrap;
 }
