--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
   } as navbarContext"
 >
   <ng-template pTemplate="start">
-    <div class="logo equafly-logo mr-2"></div>
+    <div class="logo equafly-logo mr-2 cursor-pointer" routerLink="/home"></div>
   </ng-template>
   <ng-template pTemplate="end">
     <div class="flex">
