--- a/src/app/components/flight-search/flight-search.component.html
+++ b/src/app/components/flight-search/flight-search.component.html
@@ -100,6 +100,7 @@
                 selectionMode="range"
                 [readonlyInput]="true"
                 formControlName="date"
+                [showClear]="true"
                 dateFormat="M dd"
                 styleClass="w-full"
                 placeholder="{{ 'flight_search.date' | translate }}"
