--- a/src/app/screens/flight-details/flight-details.component.html
+++ b/src/app/screens/flight-details/flight-details.component.html
@@ -3,11 +3,6 @@
   *ngIf="{ isDarkMode: uiService.isDarkMode$ | async } as flightDetailsContext"
 >
   <div class="boxed-container">
-    <!-- <div class="my-5">
-      <span class="text-6xl text-primary font-bold">{{
-        "flight_details.title" | translate
-      }}</span>
-    </div> -->
     <div class="flex mt-3 flex-column xl:flex-row">
       <div class="col-12 xl:col-7">
         <app-flight-line
@@ -19,7 +14,6 @@
         <p-card class="price-container">
           <ng-template class="relative" pTemplate="header">
             <div class="border-bottom-1 flex mobile-title-price-header">
-              <!-- <div class="flex align-content-center font-bold"></div> -->
               <span class="text-4xl font-bold">
                 {{ "cc_card.flight_total" | translate }} :
                 {{ selectedFlight?.price | currency : "USD" : "symbol" }}
@@ -37,90 +31,92 @@
                 "cc_card.enter_manually" | translate
               }}</span>
             </div>
-
-            <p-card
-              class="flex justify-content-center"
-              styleClass="{{
-                flightDetailsContext.isDarkMode
-                  ? 'credit-card relative gray-800'
-                  : 'credit-card relative surface-200'
-              }}"
-            >
-              <div class="flex justify-content-between">
-                <img src="/assets/chip.png" height="50px" alt="" />
-                <div>
-                  <div class="logo equafly-logo mr-2"></div>
-                </div>
-              </div>
-              <div class="mt-3 grid">
-                <div class="col-8">
-                  <p class="mb-2 font-bold">
-                    {{ "cc_card.card_nb" | translate }}
-                  </p>
-
-                  <p-inputMask
-                    styleClass="w-full border-round-3xl"
-                    mask="9999-9999-9999-9999"
-                    id="card-number"
-                    placeholder="XXXX-XXXX-XXXX-XXXX"
-                  ></p-inputMask>
-                </div>
-                <div class="col-4">
-                  <p class="mb-2 font-bold no-wrap">
-                    {{ "cc_card.expiry_date" | translate }}
-                  </p>
-                  <p-calendar
-                    class="filter-item cursor-pointer w-full"
-                    selectionMode="single"
-                    [readonlyInput]="true"
-                    formControlName="date"
-                    dateFormat="M/y"
-                    placeholder="MM/YY"
-                    inputStyleClass="filter-item border-round-3xl"
-                  ></p-calendar>
-                </div>
-              </div>
-              <div class="grid">
-                <div class="card-number mt-3 col-8">
-                  <p class="mb-2 font-bold">
-                    {{ "cc_card.name" | translate }}
-                  </p>
+            <form [formGroup]="ccForm">
+              <p-card
+                class="flex justify-content-center"
+                styleClass="{{
+                  flightDetailsContext.isDarkMode
+                    ? 'credit-card relative gray-800'
+                    : 'credit-card relative surface-200'
+                }}"
+              >
+                <div class="flex justify-content-between">
+                  <img src="/assets/chip.png" height="50px" alt="" />
                   <div>
-                    <input
-                      pInputText
-                      class="w-full border-round-3xl"
-                      id="card-number"
-                      placeholder="John Appleseed"
-                    />
+                    <div class="logo equafly-logo mr-2"></div>
                   </div>
                 </div>
-                <div class="mt-3 col-4">
-                  <p class="mb-2 font-bold">CVV</p>
-                  <div>
+                <div class="mt-3 grid">
+                  <div class="col-8">
+                    <p class="mb-2 font-bold">
+                      {{ "cc_card.card_nb" | translate }}
+                    </p>
+
                     <p-inputMask
-                      mask="999"
-                      styleClass="border-round-3xl w-full"
+                      styleClass="w-full border-round-3xl"
+                      formControlName="cardNumber"
+                      mask="9999-9999-9999-9999"
                       id="card-number"
-                      placeholder="XXX"
+                      placeholder="XXXX-XXXX-XXXX-XXXX"
                     ></p-inputMask>
                   </div>
+                  <div class="col-4">
+                    <p class="mb-2 font-bold no-wrap">
+                      {{ "cc_card.expiry_date" | translate }}
+                    </p>
+                    <p-calendar
+                      class="filter-item cursor-pointer w-full"
+                      selectionMode="single"
+                      [readonlyInput]="true"
+                      formControlName="expiryDate"
+                      dateFormat="M/y"
+                      placeholder="MM/YY"
+                      inputStyleClass="filter-item border-round-3xl"
+                    ></p-calendar>
+                  </div>
                 </div>
-              </div>
-            </p-card>
+                <div class="grid">
+                  <div class="card-number mt-3 col-8">
+                    <p class="mb-2 font-bold">
+                      {{ "cc_card.name" | translate }}
+                    </p>
+                    <div>
+                      <input
+                        pInputText
+                        class="w-full border-round-3xl"
+                        formControlName="Name"
+                        id="card-number"
+                        placeholder="John Appleseed"
+                      />
+                    </div>
+                  </div>
+                  <div class="mt-3 col-4">
+                    <p class="mb-2 font-bold">CVV</p>
+                    <div>
+                      <p-inputMask
+                        mask="999"
+                        styleClass="border-round-3xl w-full"
+                        formControlName="CVV"
+                        id="card-number"
+                        placeholder="XXX"
+                      ></p-inputMask>
+                    </div>
+                  </div>
+                </div>
+              </p-card>
+            </form>
           </ng-template>
           <ng-template pTemplate="footer">
-            <div></div>
-
             <div class="flex justify-content-center mb-4">
               <p-button
+                [disabled]="ccForm.invalid"
+                (onClick)="submitForm()"
                 label="{{ 'cc_card.pay' | translate }}"
                 styleClass="border-round-2xl"
                 [outlined]="true"
               ></p-button>
             </div>
           </ng-template>
-
-          <!-- <h1 class="mb-3 text-xl">Finalize your payment</h1> -->
         </p-card>
       </div>
     </div>
