--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <p-menubar
-  class="fixed left-0 right-0 z-20 surface-100"
+  class="fixed left-0 right-0 z-20 surface-100 navbar"
   *ngIf="{
     isAuthenticated: (authService.isAuthenticated$ | async)
   } as navbarContext"
