--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -1,4 +1,5 @@
 <p-sidebar
+  class="sidebar"
   [blockScroll]="true"
   (onHide)="uiService.closeSideNav()"
   [visible]="!!(uiService.sideNavOpenedSelector$ | async)"
