--- a/src/app/components/side-nav/side-nav.component.scss
+++ b/src/app/components/side-nav/side-nav.component.scss
@@ -1,4 +1,6 @@
-::ng-deep .p-selectbutton .p-button:focus.p-highlight,
-::ng-deep .p-selectbutton .p-button.p-highlight {
-  background-color: var(--primary-color);
+.sidebar {
+  ::ng-deep .p-selectbutton .p-button:focus.p-highlight,
+  ::ng-deep .p-selectbutton .p-button.p-highlight {
+    background-color: var(--primary-color);
+  }
 }
