--- a/src/app/screens/login-screen/login-screen.component.html
+++ b/src/app/screens/login-screen/login-screen.component.html
@@ -1,4 +1,6 @@
-<div class="flex justify-content-center align-content-center flex-wrap center">
+<div
+  class="flex justify-content-center align-content-center flex-wrap center login-screen"
+>
   <p-card
     class="w-11 sm:w-8 lg:w-7 xl:w-3"
     header="{{ 'login.portalTitle' | translate }}"
